portfolio section upgrade

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
           <div class="col-md-2 content">
-              <img src="images/bareportraitfeather.png" width="250px" alt="Bare portrait">         
+              <img src="images/bareportraitfeatherbw.png" width="250px" alt="Bare portrait">         
           
                
           </div>
@@ -80,10 +80,50 @@
         <div class="col-lg-8 mx-auto">
           <h2>Portfolio</h2>
           <h4>GitHub</h4>
-          <a 
-          <p class="lead">Mount Juliet, TN 37122</p>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+          <a  href="https://ronaldtbare.github.io/Portfolio">Portfolio on GitHub Pages</a>
+          <br>
+          <a  target=_blank href="/images/TravisBareResume.pdf">My Resume (pdf)</a>
+          <p class="lead">Check out some of my recent projects.</p>
+          <br>
+          <br>
         </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="/images/foodbanx.png" class="card-img-top" alt="foodbanx pic" height="250">
+                <div class="card-body">
+                  <h5 class="card-title">FoodBanx</h5>
+                  <p class="card-text">This application makes meal planning easy.</p>
+                  <a href="https://github.com/ronaldtbare/FoodBanx" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://ronaldtbare.github.io/FoodBanx/" class="btn btn-primary" target=_blank>GitHub Pages</a>
+                </div>
+            </div>
+           </div>
+
+           <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="/images/psychic.png" class="card-img-top" alt="psychic pic" height="250">
+                  <div class="card-body">
+                    <h5 class="card-title">Psychic Game</h5>
+                    <p class="card-text">This game chooses a random letter for you to guess.</p>
+                    <a href="https://github.com/ronaldtbare/Psychic-Game" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://ronaldtbare.github.io/Psychic-Game/" class="btn btn-primary" target=_blank>GitHub Pages</a>
+                  </div>
+              </div>
+             </div>
+
+             <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="/images/trains.png" class="card-img-top" alt="trains pic" height="250">
+                    <div class="card-body">
+                      <h5 class="card-title">Firebase Train Scheduler</h5>
+                      <p class="card-text">Calculates train schedules based on user input.</p>
+                      <a href="https://github.com/ronaldtbare/FirebaseTrains" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                    <a href="https://ronaldtbare.github.io/FirebaseTrains/" class="btn btn-primary" target=_blank>GitHub Pages</a>
+                    </div>
+                </div>
+               </div>
       </div>
     </div>
   </section>
