--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Portfolio</h2>
-          <h4>GitHub</h4>
+          
           <a  href="https://ronaldtbare.github.io/Portfolio">Portfolio on GitHub Pages</a>
           <br>
-          <a  target=_blank href="/images/TravisBareResume.pdf">My Resume (pdf)</a>
+          <h4>Resume</h4>
+          <a  target=_blank href="images/TravisBareResume.pdf">My Resume (pdf)</a>
           <p class="lead">Check out some of my recent projects.</p>
           <br>
           <br>
@@ -84,7 +85,7 @@
       <div class="row">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="/images/foodbanx.png" class="card-img-top" alt="foodbanx pic" height="250">
+                <img src="images/foodbanx.PNG" class="card-img-top" alt="foodbanx pic" height="250">
                 <div class="card-body">
                   <h5 class="card-title">FoodBanx</h5>
                   <p class="card-text">This application makes meal planning easy.</p>
@@ -96,7 +97,7 @@
 
            <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                  <img src="/images/psychic.png" class="card-img-top" alt="psychic pic" height="250">
+                  <img src="images/psychic.PNG" class="card-img-top" alt="psychic pic" height="250">
                   <div class="card-body">
                     <h5 class="card-title">Psychic Game</h5>
                     <p class="card-text">This game chooses a random letter for you to guess.</p>
@@ -108,7 +109,7 @@
 
              <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/trains.png" class="card-img-top" alt="trains pic" height="250">
+                    <img src="images/trains.PNG" class="card-img-top" alt="trains pic" height="250">
                     <div class="card-body">
                       <h5 class="card-title">Firebase Train Scheduler</h5>
                       <p class="card-text">Calculates train schedules based on user input.</p>
