Fix relative paths

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <title>Travis Bare - Portfolio</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/scrolling-nav.css" rel="stylesheet">
+  <link href="./css/scrolling-nav.css" rel="stylesheet">
 
 </head>
 
@@ -54,13 +54,13 @@
     <div class="container">
       <div class="row">
           <div class="col-md-2 content">
-              <img src="/images/bareportraitfeather.png" width="250px" alt="Bare portrait">     
+              <img src="./images/bareportraitfeather.png" width="250px" alt="Bare portrait">     
           </div>
   
         <div class="col-lg-8 mx-auto">
           <h2>About Me</h2>
           <p>Hello! I'm Travis Bare. I am currently enrolled in Vanderbilt Coding Bootcamp. I am learning to become a full-stack software developer. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. BASIC anyone? Anyway, I got into engineering using computers and later into 3D modeling. I have been teaching for over 20 years and decided to make a change by learning software development. There is a lot of satisfaction in coming up with an idea and seeing that idea realized. </p>
-          <img src="/images/html.png"  alt="html icon pic" width="200" height="150">
+          <img src="./images/html.png"  alt="html icon pic" width="200" height="150">
         </div>
       </div>
       
@@ -76,7 +76,7 @@
           <a  href="https://ronaldtbare.github.io/Portfolio">Portfolio on GitHub Pages</a>
           <br>
           <h4>Resume</h4>
-          <a  target=_blank href="/images/TravisBareResume.pdf">My Resume (pdf)</a>
+          <a  target=_blank href="./images/TravisBareResume.pdf">My Resume (pdf)</a>
           <p class="lead">Check out some of my recent projects.</p>
           <br>
           <br>
@@ -85,7 +85,7 @@
       <div class="row">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="/images/foodbanx.png" class="card-img-top" alt="foodbanx pic" height="250">
+                <img src="./images/foodbanx.png" class="card-img-top" alt="foodbanx pic" height="250">
                 <div class="card-body">
                   <h5 class="card-title">FoodBanx</h5>
                   <p class="card-text">This application makes meal planning easy.</p>
@@ -97,7 +97,7 @@
 
            <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                  <img src="/images/psychic.png" class="card-img-top" alt="psychic pic" height="250">
+                  <img src="./images/psychic.png" class="card-img-top" alt="psychic pic" height="250">
                   <div class="card-body">
                     <h5 class="card-title">Psychic Game</h5>
                     <p class="card-text">This game chooses a random letter for you to guess.</p>
@@ -109,7 +109,7 @@
 
              <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/trains.png" class="card-img-top" alt="trains pic" height="250">
+                    <img src="./images/trains.png" class="card-img-top" alt="trains pic" height="250">
                     <div class="card-body">
                       <h5 class="card-title">Firebase Train Scheduler</h5>
                       <p class="card-text">Calculates train schedules based on user input.</p>
