--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="./images/foodbanx.png" class="card-img-top" alt="foodbanx pic" height="250">
+                <img src="./images/foodbanx1.png" class="card-img-top" alt="foodbanx pic" height="250">
                 <div class="card-body">
                   <h5 class="card-title">FoodBanx</h5>
                   <p class="card-text">This application makes meal planning easy.</p>
@@ -97,7 +97,7 @@
 
            <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                  <img src="./images/psychic.png" class="card-img-top" alt="psychic pic" height="250">
+                  <img src="./images/psychic1.png" class="card-img-top" alt="psychic pic" height="250">
                   <div class="card-body">
                     <h5 class="card-title">Psychic Game</h5>
                     <p class="card-text">This game chooses a random letter for you to guess.</p>
@@ -109,7 +109,7 @@
 
              <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="./images/trains.png" class="card-img-top" alt="trains pic" height="250">
+                    <img src="./images/trains1.png" class="card-img-top" alt="trains pic" height="250">
                     <div class="card-body">
                       <h5 class="card-title">Firebase Train Scheduler</h5>
                       <p class="card-text">Calculates train schedules based on user input.</p>
