--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <h2>About Me</h2>
           <p>Hello! I'm Travis Bare. I am currently enrolled in Vanderbilt Coding Bootcamp. I am learning to become a full-stack software developer. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. BASIC anyone? Anyway, I got into engineering using computers and later into 3D modeling. I have been teaching for over 20 years and decided to make a change by learning software development. There is a lot of satisfaction in coming up with an idea and seeing that idea realized. </p>
           <img src="./images/html.png"  alt="html icon pic" width="200" height="150">
+          <img src="./images/node.png" alt="html icon pic"  height="150">
+          <img src="./images/mysql.png" alt="html icon pic" height="150">
+          <img src="./images/mongodb.png" alt="html icon pic" height="150">
         </div>
       </div>
       
@@ -125,7 +128,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/burgerScreenshot.png" class="card-img-top" alt="trains pic" height="250">
+            <img src="./images/burgerScreenshot.png" class="card-img-top" alt="burger pic" height="250">
             <div class="card-body">
               <h5 class="card-title">Eat Da Burger</h5>
               <p class="card-text">Burger logger with MySQL, Node, Express, and a homemade ORM.</p>
@@ -137,7 +140,7 @@
     
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/servus.png" class="card-img-top" alt="trains pic" height="250">
+            <img src="./images/servus.png" class="card-img-top" alt="servus pic" height="250">
             <div class="card-body">
               <h5 class="card-title">ServUs Nashville</h5>
               <p class="card-text">Volunteer meetup board using Nodejs, Express and MySQL</p>
@@ -196,39 +199,3 @@
 
 </html>
 
-<!-- <div class="row">
-  <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
-      <img src="./images/burgerScreenshot.png" class="card-img-top" alt="trains pic" height="250">
-      <div class="card-body">
-        <h5 class="card-title">Eat Da Burger</h5>
-        <p class="card-text">Burger logger with MySQL, Node, Express, Handlebars and a homemade ORM.</p>
-        <a href="https://github.com/ronaldtbare/burger" class="btn btn-primary" target=_blank>GitHub Repo</a>
-        <a href="https://da-burgers.herokuapp.com/" class="btn btn-primary" target=_blank>Heroku</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
-      <img src="./images/servus.png" class="card-img-top" alt="trains pic" height="250">
-      <div class="card-body">
-        <h5 class="card-title">ServUs Nashville</h5>
-        <p class="card-text">Volunteer meetup board using Nodejs, Express and MySQL</p>
-        <a href="https://github.com/ronaldtbare/project2" class="btn btn-primary" target=_blank>GitHub Repo</a>
-        <a href="https://radiant-tor-14793.herokuapp.com/" class="btn btn-primary" target=_blank>Heroku</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-4">
-    <div class="card" style="width: 18rem;">
-      <img src="./images/foodbanx1.png" class="card-img-top" alt="foodbanx pic" height="250">
-      <div class="card-body">
-        <h5 class="card-title">FoodBanx</h5>
-        <p class="card-text">This application makes meal planning easy.</p>
-        <a href="https://github.com/ronaldtbare/FoodBanx" class="btn btn-primary" target=_blank>GitHub Repo</a>
-        <a href="https://ronaldtbare.github.io/FoodBanx/" class="btn btn-primary" target=_blank>GitHub Pages</a>
-      </div>
-    </div>
-  </div> -->
