--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
   </nav>
-
+    <!-- comment -->
   <header class="text-white">
     <div class="container text-center">
       <h1>Ronald Travis Bare</h1>
@@ -126,7 +126,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/burgerScreenshot.png" class="card-img-top" alt="burger pic" height="250">
+            <img src="./images/burgerScreenshot.PNG" class="card-img-top" alt="burger pic" height="250">
             <div class="card-body">
               <h5 class="card-title">Eat Da Burger</h5>
               <p class="card-text">Burger logger with MySQL, Node, Express, and a homemade ORM.</p>
@@ -138,7 +138,7 @@
     
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/servus.png" class="card-img-top" alt="servus pic" height="250">
+            <img src="./images/servus.PNG" class="card-img-top" alt="servus pic" height="250">
             <div class="card-body">
               <h5 class="card-title">ServUs Nashville</h5>
               <p class="card-text">Volunteer meetup board using Nodejs, Express and MySQL</p>
@@ -150,7 +150,7 @@
 
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/giftastic.png" class="card-img-top" alt="giftastic pic" height="250">
+            <img src="./images/giftastic.PNG" class="card-img-top" alt="giftastic pic" height="250">
             <div class="card-body">
               <h5 class="card-title">GifTastic!</h5>
               <p class="card-text">Superhero animation retriever.</p>
