changed png to PNG

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img src="./images/giftastic.PNG" class="card-img-top" alt="giftastic pic" height="250">
+            <img src="./images/giftastic.png" class="card-img-top" alt="giftastic pic" height="250">
             <div class="card-body">
               <h5 class="card-title">GifTastic!</h5>
               <p class="card-text">Superhero animation retriever.</p>
