--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <img src="./images/giftastic.png" class="card-img-top" alt="giftastic pic" height="250">
             <div class="card-body">
               <h5 class="card-title">GifTastic!</h5>
-              <p class="card-text">Superhero animation retriever.</p>
+              <p class="card-text">A simple superhero animation retriever using an API.</p>
               <a href="https://github.com/ronaldtbare/Giftastic" class="btn btn-primary" target=_blank>GitHub Repo</a>
               <a href="https://ronaldtbare.github.io/GifTastic/" class="btn btn-primary" target=_blank>GitHub Pages</a>
             </div>
