changed spacing for projects

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
           <h2>Portfolio</h2>
           <a  href="https://ronaldtbare.github.io/Portfolio">Portfolio on GitHub Pages</a>
           <br>
-          <h4>Resume</h4>
+          <h2>Resume</h2>
           <a  target=_blank href="./images/TravisBareResume.pdf">My Resume (pdf)</a>
-          <p class="lead">Check out some of my recent projects.</p>
           <br>
+          <br>
+          <h2>Check out some of my recent projects.</h2>
           <br>
         </div>
       </div>
@@ -121,7 +122,8 @@
               </div>
       </div>
     </div>
-
+<br>
+<br>
     <div class="container">
       <div class="row">
         <div class="col-md-4">
