added booksearch project

--- a/index.html
+++ b/index.html
@@ -161,7 +161,22 @@
             </div>
           </div>
         </div>
-      
+<br>
+<br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./images/booksearch.jpg" class="card-img-top" alt="book search pic" height="250">
+                <div class="card-body">
+                  <h5 class="card-title">Goolge Book Search</h5>
+                  <p class="card-text">Full-stack MERN application for searching books.</p>
+                  <a href="https://github.com/ronaldtbare/booksearch" class="btn btn-primary" target=_blank>GitHub Repo</a>
+                  <a href="https://travisbarebooksearch.herokuapp.com" class="btn btn-primary" target=_blank>Heroku</a>
+                </div>
+              </div>
+            </div>
+        
       </div>
     </div>
   </section>
