updated about page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   
         <div class="col-lg-8 mx-auto">
           <h2>About Me</h2>
-          <p>Hello! I'm Travis Bare. I am currently enrolled in Vanderbilt Coding Bootcamp. I am learning to become a full-stack software developer. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. BASIC anyone? Anyway, I got into engineering using computers and later into 3D modeling. I have been teaching for over 20 years and decided to make a change by learning software development. There is a lot of satisfaction in coming up with an idea and seeing that idea realized. </p>
+          <p>Hello! I'm Travis Bare. I am finishing Vanderbilt Coding Bootcamp. I am learning to become a full-stack software developer. Here is an overview of the topics we have covered at Vanderbilt. They are: HTML, CSS, Javscript, JQuery, MySQL, MongoDB, Node, Express, and a little C#. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. (I had to save my files on cassette tape!) </p>
+            <p>Anyway, I got into engineering using computers and later into 3D modeling. I have been teaching CAD/3D modeling/Animation for over 20 years and decided to make a change by learning software development. </p>
           <img src="./images/html.png"  alt="html icon pic" width="200" height="150">
           <img src="./images/node.png" alt="html icon pic"  height="150">
           <img src="./images/mysql.png" alt="html icon pic" height="150">
