updated github link index

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Portfolio</h2>
-          <a  href="https://ronaldtbare.github.io/Portfolio">Portfolio on GitHub Pages</a>
+          <h2>GitHub</h2>
+          <a  href="https://github.com/ronaldtbare">GitHub Profile</a>
           <br>
           <h2>Resume</h2>
           <a  target=_blank href="./images/BareResume7-3-19.pdf">My Resume (pdf)</a>
