--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="heading">About</h2>
           <br>
-          <p>Hello! I'm Travis Bare. I recently finished Vanderbilt Coding Bootcamp. I am learning to become a full-stack web developer. Here is an overview of the topics we have covered at Vanderbilt. They are: HTML, CSS, Javscript, JQuery, MySQL, MongoDB, Node, Express, React and a little C#. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. (I had to save my files on cassette tape!) </p>
-            <p>My career started by teaching engineering using computers and later morphed into 3D modeling and animation. I have been teaching CAD/3D modeling/Animation for over 20 years and decided to make a change by learning software development. </p>
+          <p>Hello! I'm Travis Bare. I am a full-stack web developer focusing on front-end technologies. I have an extensive background in education and a dedication to life-long learning.  Here are some of the technologies I have worked with: HTML, CSS, Javscript, JQuery, MySQL, MongoDB, Node, Express, React and a little C#. I really enjoy problem solving, technology and computers. My first computer was a Commodore64 back in the 80s. (I had to save my files on cassette tape!) </p>
+            <p>My career started by teaching engineering using computers and later morphed into 3D modeling and animation. I have a lot of experience teaching CAD/3D modeling/Animation and decided to make a change by learning software development. </p>
           <br>
-          <a class="links" target=_blank href="./images/BareResume7-24-19.pdf">Resume</a>
+          <a class="links" target=_blank href="./images/BareResume8-7-19.pdf">Resume</a>
           <br>
           <br>
           <hr>
