--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header class="text-white">
     <div class="container text-center">
       <h1>Ronald Travis Bare</h1>
-      <p class="lead">Software Developer</p>
+      <p class="lead">Web Developer</p>
     </div>
   </header>
 
